# axum-schemars

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml  cog.toml  package.json  pnpm-lock.yaml  spellcheck.dic
.github/: settings.yml
.github/workflows/: rust.yml
src/: lib.rs
