[package]
name = "axum-jsonschema"
version = "0.9.1"
edition = "2021"
authors = ["tamasfe", "wicpar"]
keywords = ["web", "axum", "json"]
repository = "https://github.com/wicpar/axum-jsonschema"
license = "MIT OR Apache-2.0"
description = "Request JSON schema validation for axum"
readme = "README.md"

[dependencies]
aide = { version = "0.15", optional = true, default-features = false, features = [
    "axum-json",
] }
axum = { version = "0.8", default-features = false, features = ["json"] }
http = "1.0.0"
itertools = "0.14.0"
jsonschema = { version = "0.37.1", default-features = false }
schemars = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1.8"
tracing = "0.1.36"

[features]
aide = ["dep:aide"]
